<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.fragment.HomeFragment">

    <TextView
        android:textSize="50sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_fragment" />

    <Button
        android:id="@+id/btDataFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_fragment" />

    <Button
        android:id="@+id/btTextFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_fragment" />
</LinearLayout>