<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="location"
            type="com.example.baseproject.data.model.Location" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_item_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:text="@{location.title}"
            android:layout_marginStart="5dp"
            android:id="@+id/tvTitleContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvTitle"
            app:layout_constraintTop_toTopOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvLocationType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_item_location_type"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:text="@{location.location_type}"
            android:layout_marginStart="5dp"
            android:id="@+id/tvLocationTypeContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvLocationType"
            app:layout_constraintTop_toTopOf="@id/tvLocationType" />

        <TextView
            android:id="@+id/tvWoeId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_item_woe_id"
            app:layout_constraintStart_toStartOf="@id/tvLocationType"
            app:layout_constraintTop_toBottomOf="@id/tvLocationType" />

        <TextView
            android:text="@{location.woeid}"
            android:layout_marginStart="5dp"
            android:id="@+id/tvWoeIdContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvWoeId"
            app:layout_constraintTop_toTopOf="@id/tvWoeId" />

        <TextView
            android:id="@+id/tvLattLong"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location_item_latt_long"
            app:layout_constraintStart_toStartOf="@id/tvWoeId"
            app:layout_constraintTop_toBottomOf="@id/tvWoeId" />

        <TextView
            android:text="@{location.latt_long}"
            android:layout_marginStart="5dp"
            android:id="@+id/tvLattLongContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvLattLong"
            app:layout_constraintTop_toTopOf="@id/tvLattLong" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>